# telemetry

./: .fsm.h.swp  .gitignore  .main.cpp.swp  CMakeLists.txt  README.md  a.out  fake_receiver.c  fsm.cpp  fsm.h  fsm_main.cpp  id_info.cpp  id_info.h  id_main.cpp  main.cpp  message.cpp  message.h  message_main.cpp  session1.txt  session2.txt  session3.txt  session4.txt  statistics1.csv  statistics2.csv  statistics3.csv  statistics4.csv  ù
session1/: session1_1.txt  session1_2.txt  session1_3.txt  session1_4.txt  statistics1_1.csv  statistics1_2.csv  statistics1_3.csv  statistics1_4.csv
session10/: session10_1.txt  session10_2.txt  session10_3.txt  session10_4.txt  statistics10_1.csv  statistics10_2.csv  statistics10_3.csv  statistics10_4.csv
session2/: session2_1.txt  session2_2.txt  session2_3.txt  session2_4.txt  statistics2_1.csv  statistics2_2.csv  statistics2_3.csv  statistics2_4.csv
session3/: session3_1.txt  session3_2.txt  session3_3.txt  session3_4.txt  statistics3_1.csv  statistics3_2.csv  statistics3_3.csv  statistics3_4.csv
session4/: session4_1.txt  session4_2.txt  session4_3.txt  session4_4.txt  statistics4_1.csv  statistics4_2.csv  statistics4_3.csv  statistics4_4.csv
session5/: session5_1.txt  session5_2.txt  session5_3.txt  session5_4.txt  statistics5_1.csv  statistics5_2.csv  statistics5_3.csv  statistics5_4.csv
session6/: session6_1.txt  statistics6_1.csv
session7/: session7_1.txt  statistics7_1.csv
session8/: session8_1.txt  statistics8_1.csv
session9/: session9_1.txt  session9_2.txt  statistics9_1.csv  statistics9_2.csv
(+4 files in other folders)
